# ebpf-ipblocker-dynamic

./: README.md
Policy/: output.json
grpc-stream/: Readme  go.mod
grpc-stream/client/: client.go
grpc-stream/proto/: service.proto
grpc-stream/proto/mypackage/: service.pb.go  service_grpc.pb.go
grpc-stream/server/: server.go
xdp-drop/policy/: input.json
xdp-drop/xdp-drop/: Cargo.toml
xdp-drop/xdp-drop-ebpf/src/: main.rs
xdp-drop/xdp-drop/src/: iptool.rs  main.rs  util.rs
