[package]
name = "xdp-drop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features = ["async_tokio"] }
aya-log = "0.1"
xdp-drop-common = { path = "../xdp-drop-common", features = ["user"] }
anyhow = "1.0.68"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1"
env_logger = "0.10"
serde_json = "1.0.96"
notify = { version = "5.1.0", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0.163", features = ["derive"] }


[[bin]]
name = "xdp-drop"
path = "src/main.rs"
